  - Changed OPTION LIST to only show options that differ from their defaults:
         - use OPTION LIST ALL to list all options.
  - Changed OPTION <option> <value> command so that for all options with
    enumerated values the value can now be supplied as a string, e.g.
        OPTION CODEPAGE NONE
        OPTION CODEPAGE "NONE"
        DIM none$ = "NONE"
        OPTION CODEPAGE none$
  - Changed SYSTEM execute command to have a 3rd optional argument to capture
    the exit status of the executed command, e.g.
        SYSTEM command$, out$, exit_status%
        SYSTEM command$, out%(), exit_status%
    The SYSTEM command now only reports an error if it cannot run the command.
    If the command runs but fails then no error is reported but the failure
    code will be captured in exit_status%.
  - Changed LOAD and RUN so that if a filename without a [.bas|.BAS|.Bas]
    extension is not provided then one is automatically appended:
        - unlike other MMBasic ports MMB4L has a case-sensitive file-system
          and expects MMBasic program files to have one of three possible
          extensions: .bas, .BAS, or .Bas.
        - if no extension is specified then MMB4L will check for the existence
          of a file with each extension in order, if no such file is found then
          it assumes the .bas extension.
  - Changed assignment of values to MM.ERRNO, they are now:
           0      : no error.
       1  ..  255 : standard error numbers (errno) for C library calls.
          256     : unclassified MMBasic error.
      257 .. 1023 : reserved for specific MMBasic errors.
         1024+    : reserved for program specific errors.
  - Removed LS as an alias of FILES:
        - LS was a non-standard aberration inherited from the CMM2.
        - use !ls instead to execute the 'ls' Linux shell command with all its
          power and with no requirement to enquote its arguments.
  - Fixed bug where could not open non-existing file for RANDOM access.