@@ -63,6 +63,8 @@ Version 2022.01.00-a4 - ??-???-2022:
         OPTION CODEPAGE "NONE"
         DIM none$ = "NONE"
         OPTION CODEPAGE none$
+  - Changed RESTORE command to support targets given as string or number
+    expressions as per PicoMite.
   - Changed SYSTEM execute command to have a 3rd optional argument to capture
     the exit status of the executed command, e.g.
         SYSTEM command$, out$, exit_status%
